k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cart-deployment
  namespace: ecommerce

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cart-service

  template:
    metadata:
      labels:
        app: cart-service

    spec:
      containers:
        - name: cart-service
          image: ecommerce-cart:v1
          imagePullPolicy: Never

          command: ["node"]
          args: ["server.js"]

          ports:
            - containerPort: 3003
