k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-deployment
  namespace: ecommerce

spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: ecommerce-user:v1
          imagePullPolicy: Never

          command: ["node"]
          args: ["server.js"]

          ports:
            - containerPort: 3001
