k8s/cart-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cart-service
  namespace: ecommerce

spec:
  selector:
    app: cart-service

  ports:
    - port: 3003
      targetPort: 3003

  type: ClusterIP
