k8s/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service
  namespace: ecommerce

spec:

  selector:
    app: product-service

  ports:
  - port: 3002
    targetPort: 3002

  type: ClusterIP
