k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:
    - host: ecommerce.local
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3002

          - path: /filter
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3002

          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 3003
